Add sections to index.html with placeholder text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,32 @@
     <title>Mimi's Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<header>
+    <nav>
+        <ul>
+            <li>About Me</li>
+            <li>Why</li>
+            <li>Game</li>
+            <li>Beef</li>
+        </ul>
+    </nav>
+</header>
 <body>
+    <div id="about-section">
+        <h2>About Me</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quaerat vitae, quam quisquam quis voluptas.</p>
+    </div>
+    <div id="why-section">
+        <h2>Why Web Development?</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione laborum praesentium laudantium dolore explicabo sapiente.</p>
+    </div>
+    <div id="beef-section">
+        <h2>Beef the Cat</h2>
+        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam placeat repellat sunt nesciunt repudiandae error.</p>
+    </div>
     
 </body>
+<footer>
+
+</footer>
 </html>
