Change font + add section class to index.html

--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
     </nav>
 </header>
 <body>
-    <div id="about-section">
+    <div class="section" id="about">
         <h2>About Me</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus quaerat vitae, quam quisquam quis voluptas.</p>
     </div>
-    <div id="why-section">
+    <div class="section" id="why">
         <h2>Why Web Development?</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione laborum praesentium laudantium dolore explicabo sapiente.</p>
     </div>
-    <div id="beef-section">
+    <div class="section" id="beef">
         <h2>Beef the Cat</h2>
         <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam placeat repellat sunt nesciunt repudiandae error.</p>
     </div>
     
 </body>
 <footer>
-
+<p>Mimi Sotudeh, 2023</p>
 </footer>
 </html>
