--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
+    <h2>Mimi's Website</h2>
     <nav>
         <ul>
             <li>About Me</li>
