Amend header + section margin/padding

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
+    <div class="header-section">
     <h1>Mimi's Website</h1>
     <nav>
         <ul>
@@ -16,6 +17,7 @@
             <li>Beef</li>
         </ul>
     </nav>
+    </div>
 </header>
 <br>
 <body>
@@ -41,6 +43,6 @@
     <br>
 </body>
 <footer>
-<p>Mimi Sotudeh, 2023</p>
+<p>Mimi Sotudeh for Founders + Coders, 2023</p>
 </footer>
 </html>
