Add HTML for image carousel

--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
         <div class="section" id="beef">
             <h2>Beef the Cat</h2>
             <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam placeat repellat sunt nesciunt repudiandae error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio nisi obcaecati ipsam autem aspernatur natus voluptate temporibus quis minima officia, quo amet a sit quisquam deleniti, dignissimos provident pariatur. Iste ad ab laudantium nisi numquam impedit, totam fugit ipsam maiores?</p>
+            <div class="slider-wrapper">
+                <button class="slide-arrow" id="slide-arrow-prev">
+
+                </button>
+                <button class="class slide-arrow" id="slide-arrow-next">
+
+                </button>
+                <ul class="class slides-container" id="slides-container">
+                    <li class="slide"></li>
+                    <li class="slide"></li>
+                    <li class="slide"></li>
+                    <li class="slide"></li>
+                    <li class="slide"></li>
+                </ul>
+            </div>
         </div>
     </div>
     <br>
