Add tampon trawl section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li>About Me</li>
             <li>Why</li>
+            <li>Tampon Trawl</li>
             <li>Game</li>
             <li>Beef</li>
         </ul>
@@ -33,6 +34,12 @@
         <div class="section" id="why">
             <h2>Why Web Development?</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione laborum praesentium laudantium dolore explicabo sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ab soluta sed necessitatibus? Reiciendis nam perspiciatis adipisci, saepe fugit vitae minima accusamus consequuntur facere amet, aspernatur expedita eligendi repudiandae. Sapiente ipsam dolorem facere alias consectetur blanditiis? Soluta rem nihil deserunt?</p>
+        </div>
+        <br>
+        <div class="section" id="tampon-trawl">
+            <h2>Tampon Trawl Game</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore iste consequuntur recusandae maxime incidunt architecto, sit ratione quos aut reiciendis expedita sapiente explicabo! Incidunt omnis officia iste atque porro est non in voluptatibus, optio modi sint dicta deleniti officiis quia. Nulla dolore officia natus saepe eum a dolorem delectus nam!</p>
+            <iframe frameborder="0" src="https://itch.io/embed/266046?border_width=0&amp;bg_color=ffc1f8&amp;fg_color=ffffff&amp;link_color=81d8e4&amp;border_color=d395cc" width="550" height="165"><a href="https://mimsotu.itch.io/tampon-trawl">Tampon Trawl by mimi</a></iframe>
         </div>
         <br>
         <div class="section" id="beef">
